--- a/Graphics/AdminMenu.xaml
+++ b/Graphics/AdminMenu.xaml
@@ -7,8 +7,11 @@
         mc:Ignorable="d"
         Title="AdminMenu" Height="450" Width="800">
     <Grid>
-        <Button x:Name="UsersSelectionButton" Content="Users" HorizontalAlignment="Left" Height="32" Margin="513,231,0,0" VerticalAlignment="Top" Width="129" Click="UsersSelectionButton_Click"/>
-        <Button x:Name="ProductManagementButton" Content="Product Management" HorizontalAlignment="Left" Height="32" Margin="513,299,0,0" VerticalAlignment="Top" Width="129" Click="ProductManagementButton_Click"/>
+        <Button x:Name="UsersSelectionButton" Content="Accounts" HorizontalAlignment="Left" Height="32" Margin="513,231,0,0" VerticalAlignment="Top" Width="129" Click="UsersSelectionButton_Click"/>
+        <Button x:Name="ProductManagementButton" Content="Product Management" HorizontalAlignment="Left" Height="32" Margin="513,344,0,0" VerticalAlignment="Top" Width="129" Click="ProductManagementButton_Click"/>
+        <Button x:Name="button" Content="Vendors" HorizontalAlignment="Left" Margin="513,294,0,0" VerticalAlignment="Top" Width="129" Height="29" Click="button_Click"/>
+        <Button x:Name="button1" Content="Employees" HorizontalAlignment="Left" Margin="513,168,0,0" VerticalAlignment="Top" Width="129" Height="33" Click="button1_Click"/>
+        <Label x:Name="usernameDisplayLabel" Content="" HorizontalAlignment="Left" Height="29" Margin="660,10,0,0" VerticalAlignment="Top" Width="106"/>
 
     </Grid>
 </Window>
